cluster/apps/harbor/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor
  namespace: harbor
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/appName: "traefik"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "harbor.${SECRET_DOMAIN}"
      secretName: "harbor-tls"
  rules:
    - host: "harbor.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-notary
  namespace: harbor
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/appName: "traefik"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "notary.${SECRET_DOMAIN}"
      secretName: "harbor-tls"
  rules:
    - host: "notary.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor
                port:
                  number: 4443
